kubernetes/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-jochemwhite
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-jochemwhite
  template:
    metadata:
      labels:
        app: test-jochemwhite
    spec:
      containers:
      - name: test-jochemwhite
        image: ghcr.io/jochemwhite/test.jochemwhite.nl:964aadd882effd932eea057fa7460fbf176c56c4
        ports:
        - containerPort: 3000
