kubernetes/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-jochemwhite-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: test-jochemwhite
